Improve the cod eof the abstract pro macros and improve the bridge macros.